artifacts/e2e/15_boot_event_reordering.sh/20260424T175708Z/log.txt
[scenario] fixture_root=/var/folders/bl/w2vvyf7n0sq2vrh10pg8bd4h0000gn/T//tenex-e2e-15-1777053428-58437
==> Locating source agents
==> Creating fixture directories
==> Generating keys with nak
==> Writing backend and CLI config
==> Writing generated agent identities
==> Skipping relay publishing because TENEX_INTEROP_SKIP_PUBLISH=1
[harness] fixture loaded from /var/folders/bl/w2vvyf7n0sq2vrh10pg8bd4h0000gn/T//tenex-e2e-15-1777053428-58437
[harness]   backend pubkey:  58eb5619017bae9ba150c76af853a9bf681eda52dabba1681b7b2fe2b01284dc
[harness]   user pubkey:     e37db9a9a7d2e5309ce86796db7b2daaaa8bd0b40f2a6c9d3f191c297943e870
[harness]   agent1 pubkey:   804c162962a5ba84ac97a28c64fe614f635f0ff3c6ea3bd826fe5caa1536c197
[harness]   agent2 pubkey:   422b3fea6ac8d8d0174310da2f0ae092b5e9996aadbc1aee1bb025aa99e883e8
[harness]   project a-tag:   31933:e37db9a9a7d2e5309ce86796db7b2daaaa8bd0b40f2a6c9d3f191c297943e870:nak-interop-test-20260424205708-21924
[harness] starting relay on 127.0.0.1:56303 (admins=1)
[harness] relay ready at ws://127.0.0.1:56303
[harness] daemon config relays -> [ws://127.0.0.1:56303]
connecting to ws://127.0.0.1:56303... ok.
publishing to ws://127.0.0.1:56303... success.
[harness] starting daemon (TENEX_BASE_DIR=/var/folders/bl/w2vvyf7n0sq2vrh10pg8bd4h0000gn/T//tenex-e2e-15-1777053428-58437/backend)
[harness] daemon log tail:
   Compiling tenex-daemon v0.1.0 (/Users/pablofernandez/Work/TENEX-ff3ssq/crates/tenex-daemon)
warning: unused import: `WorkerRuntimeStartedDispatch`
  --> crates/tenex-daemon/src/daemon_worker_runtime.rs:39:61
   |
39 | use crate::worker_runtime_state::{SharedWorkerRuntimeState, WorkerRuntimeStartedDispatch};
   |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Instant`
 --> crates/tenex-daemon/src/worker_process.rs:9:27
  |
9 | use std::time::{Duration, Instant};
  |                           ^^^^^^^

error[E0063]: missing field `persisted_whitelist` in initializer of `NostrSubscriptionPlanInput<'_>`
   --> crates/tenex-daemon/src/nostr_subscription_gateway.rs:669:51
    |
669 |     let refreshed = build_nostr_subscription_plan(NostrSubscriptionPlanInput {
    |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `persisted_whitelist`

For more information about this error, try `rustc --explain E0063`.
warning: `tenex-daemon` (lib) generated 2 warnings
error: could not compile `tenex-daemon` (lib) due to 1 previous error; 2 warnings emitted
[harness] FATAL: daemon never wrote lockfile
[harness] cleanup (script exit code=1)
[harness] stopping daemon pid 59022 (SIGTERM)
[harness] stopping relay pid 58956
